# skylelib

./: Documentation.md  LICENSE  README.md
examples/avalonia/: .gitignore  ARCHITECTURE.md  App.axaml  App.axaml.cs  Program.cs  README.md  SkyleAvaloniaExample.csproj  app.manifest
examples/avalonia/Interop/: NativeEnums.cs  NativeMethods.cs  NativeStructs.cs  SkyleClient.cs
examples/avalonia/ViewModels/: MainViewModel.cs  ViewModelBase.cs
examples/avalonia/Views/: MainWindow.axaml  MainWindow.axaml.cs  PositioningView.cs  VideoView.cs
examples/flutter/: README.md
examples/flutter/app/: README.md  pubspec.yaml
examples/flutter/app/android/app/: build.gradle.kts
examples/flutter/app/android/app/src/main/: AndroidManifest.xml
examples/flutter/app/android/app/src/main/kotlin/de/eyev/skyle_flutter_example/: MainActivity.kt
examples/flutter/app/ios/Runner/: Info.plist
examples/flutter/app/lib/: main.dart  positioning_view.dart  video_view.dart
examples/flutter/app/linux/: CMakeLists.txt
examples/flutter/app/linux/runner/: my_application.cc
examples/flutter/app/macos/Flutter/: GeneratedPluginRegistrant.swift
examples/flutter/app/macos/Runner/: DebugProfile.entitlements  Release.entitlements
examples/flutter/app/macos/Runner/Configs/: AppInfo.xcconfig
examples/flutter/app/test/: widget_test.dart
examples/flutter/app/windows/: CMakeLists.txt
examples/flutter/app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
examples/flutter/app/windows/runner/: Runner.rc  main.cpp
examples/flutter/flutter_eap/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Documentation.md  README.md  pubspec.yaml
examples/flutter/flutter_eap/android/: CMakeLists.txt  build.gradle  settings.gradle
examples/flutter/flutter_eap/android/src/main/: AndroidManifest.xml
examples/flutter/flutter_eap/android/src/main/cpp/: flutter_eap_bridge.c  flutter_eap_bridge.h  jni_bridge.c
examples/flutter/flutter_eap/android/src/main/kotlin/de/eyev/flutter_eap/: EapClientJni.kt  FlutterEapPlugin.kt  UsbEndpointManager.kt
examples/flutter/flutter_eap/android/src/test/kotlin/de/eyev/flutter_eap/: FlutterEapPluginTest.kt
examples/flutter/flutter_eap/darwin/: skylelib_prebuilt.rb
examples/flutter/flutter_eap/darwin/Classes/: flutter_eap_bridge_apple.c  flutter_eap_bridge_apple.h
examples/flutter/flutter_eap/ios/: flutter_eap.podspec
examples/flutter/flutter_eap/ios/Classes/: BoundedQueue.swift  FlutterEapPlugin.swift  OutputStreamManager.swift  flutter_eap_ios.h  skylelib_unity.c
examples/flutter/flutter_eap/lib/: flutter_eap.dart  flutter_eap_models.dart  flutter_eap_providers.dart
examples/flutter/flutter_eap/lib/src/: eap_client.dart
examples/flutter/flutter_eap/lib/src/ffi/: eap_client_bindings.dart  eap_client_ffi.dart  ffi_structs.dart
examples/flutter/flutter_eap/lib/src/models/: models.dart
examples/flutter/flutter_eap/lib/src/models/base/: point2d.dart  rect2d.dart  rotated_rect.dart  size2d.dart  sizeu.dart
examples/flutter/flutter_eap/lib/src/models/calibration/: calibration_config.dart  calibration_message.dart  calibration_point.dart  calibration_progress.dart  calibration_result.dart
examples/flutter/flutter_eap/lib/src/models/connection/: connection_state.dart
examples/flutter/flutter_eap/lib/src/models/control/: control_data.dart  display_info.dart
examples/flutter/flutter_eap/lib/src/models/file/: file_upload_progress.dart  file_upload_status.dart
examples/flutter/flutter_eap/lib/src/models/gaze/: gaze_data.dart  gaze_type.dart  gazes_data.dart
examples/flutter/flutter_eap/lib/src/models/logging/: log_level.dart  log_message.dart
examples/flutter/flutter_eap/lib/src/models/positioning/: eye_data.dart  face_data.dart  feature_data.dart  glints_data.dart  iris_data.dart
examples/flutter/flutter_eap/lib/src/models/version/: version_data.dart
examples/flutter/flutter_eap/lib/src/models/video/: video_frame.dart
examples/flutter/flutter_eap/lib/src/providers/: eap_providers.dart  eap_providers.g.dart
examples/flutter/flutter_eap/macos/: darwin  flutter_eap.podspec
examples/flutter/flutter_eap/macos/Classes/: FlutterEapPlugin.swift  flutter_eap_macos.h  skylelib_unity.c
examples/flutter/flutter_eap/windows/: CMakeLists.txt  flutter_eap_bridge_windows.c  flutter_eap_bridge_windows.h  flutter_eap_plugin.cpp  flutter_eap_plugin.h  flutter_eap_plugin_c_api.cpp
examples/flutter/flutter_eap/windows/include/flutter_eap/: flutter_eap_plugin_c_api.h
examples/flutter/flutter_eap_riverpod/: .gitignore  CHANGELOG.md  LICENSE  README.md  build.yaml  pubspec.yaml
examples/flutter/flutter_eap_riverpod/lib/: flutter_eap_riverpod.dart
examples/flutter/flutter_eap_riverpod/lib/src/: eap_providers.dart
examples/swiftui/: .gitignore  README.md  project.yml
examples/swiftui/Sources/: App.swift  ExternalAccessoryTransport.swift  Model.swift  SkyleClient.swift  SkyleViewModel.swift
examples/swiftui/Sources/Views/: ContentView.swift  PositioningCanvasView.swift  VideoCanvasView.swift
examples/swiftui/Support/: Skylelib-Bridging-Header.h  iOS-Info.plist
